# -bacos-Actualizador-de-temas

./: .dockerignore  .env.example  .gitignore  AGENTS.md  INSTRUCCIONES_INSTALACION.md  README.md  README_CURSORES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vercel.json
apps/api/: alembic.ini  index.py  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_expand_report_types.py  0002_file_blobs.py  0003_merge_report_types_and_file_blobs.py  0004_evidence_quality_document_versions.py
apps/api/api/: index.py
apps/api/app/: main.py  schemas.py
apps/api/app/api/: deps.py  routes.py
apps/api/app/core/: brand.py  config.py  database_url.py  rate_limit.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/document_processing/: docx_extractor.py  docx_writer.py  ocr_extractor.py  pdf_extractor.py  section_splitter.py  validators.py
apps/api/app/llm/: model_router.py  runtime_policy.py  schemas.py  session_store.py
apps/api/app/prompts/: consolidation_system.md  curriculum_mapping_system.md  resource_generation_system.md  scientific_update_system.md
apps/api/app/research/: __init__.py  schemas.py  source_policy.py  web_search.py
apps/api/app/services/: audit.py  (+15 more)
apps/api/scripts/: create_admin.py
apps/api/tests/: conftest.py  test_ai_providers.py  test_async_jobs.py  test_claim_research_pipeline.py  test_database_url.py  test_documents_and_consolidation.py  test_projects.py  test_report_quality_gate.py  test_research_analysis.py  test_security.py  test_source_policy.py
(+126 files in other folders)
