[project]
name = "abacos-api"
version = "0.1.0"
description = "API para el sistema documental de actualización científica de Ábacos."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "beautifulsoup4>=4.12.3",
  "email-validator>=2.2.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "markdown>=3.7",
  "mammoth>=1.8.0",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pwdlib[argon2]>=0.2.1",
  "pypdf>=4.3.1",
  "python-docx>=1.1.2",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.8",
  "rq>=1.16.2",
  "sqlalchemy>=2.0.32",
  "uvicorn[standard]>=0.30.6",
  "pdfplumber>=0.11.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.2"
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["B008", "E501", "UP007", "UP035", "UP042"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
